# AgenticPMS

./: README.md  main.py  package-lock.json  package.json  pyproject.toml
configurations/: config.yaml
configurations/experiment/: core.yaml
configurations/module_agent/: core_module_agent.yaml
configurations/project_agent/: core_project_agent.yaml
configurations/task_agent/: core_task_agent.yaml
configurations/visualization_agent/: core_visualization_agent.yaml
figures/: agents_internal.excalidraw
src/agent_utils/: base_stateful_agent.py  checkpoint_state.py  scoring.py
src/experiments/: base_experiment.py  plan_generation.py
src/module_agents/: stateful_module_agent.py
src/project_agents/: stateful_project_agent.py
src/project_agents/tools/: project_plan_tools.py
src/prompts/: __init__.py  registry.py
src/prompts/data/module_agent/: critic_agent.yaml  critic_runner_instruction.yaml  designer_agent.yaml  designer_critique_instruction.yaml  designer_initial_instruction.yaml  planner_agent.yaml  planner_runner_instruction.yaml
src/prompts/data/project_agent/: critic_agent.yaml  critic_runner_instruction.yaml  designer_agent.yaml  designer_critique_instruction.yaml  designer_initial_instruction.yaml  planner_agent.yaml  planner_runner_instruction.yaml
src/prompts/data/task_agent/: critic_agent.yaml  critic_runner_instruction.yaml  designer_agent.yaml  designer_initial_instruction.yaml  planner_agent.yaml  planner_runner_instruction.yaml
src/task_agents/: stateful_task_agent.py
src/utils/: logging.py
