[project]
name = "AgenticPMS"
version = "0.1.0"
description = "Agentic Construction of Execution-Ready Project Roadmaps" 
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
